fix color when not dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 body {
     height: 100vh;
-    @apply dark:bg-[#2a2548] dark:text-white
+    @apply dark:bg-[#2a2548] dark:text-white text-black
 }
 #app {
     height: 100vh;
